# Kogarashi

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  book.toml  docker-compose.yml  mkdocs.yml  rust-toolchain
benches/: msm.rs  (+7 more)
bls12_381/: Cargo.toml  README.md
bls12_381/benches/: bls12_381_curve.rs  bls12_381_field.rs  pairing.rs
bls12_381/src/: fq.rs  fqn.rs  fr.rs  g1.rs  g2.rs  gt.rs  lib.rs  pairing.rs  params.rs
bls12_381/tests/: pairing.rs
bn254/: Cargo.toml  README.md
bn254/benches/: bn_254_curve.rs  bn_254_field.rs
bn254/src/: driver.rs  ff_compat.rs  fq.rs  fqn.rs  fr.rs  g1.rs  g2.rs  gt.rs  lib.rs  pairing.rs  params.rs
bn254/tests/: pairing.rs
client/: Cargo.toml
client/cli/: Cargo.toml
client/cli/src/: main.rs  utils.rs
client/rpc/: Cargo.toml
client/rpc/src/: extrinsic.rs  lib.rs  rpc.rs  wallet.rs
client/src/: balance.rs  extrinsic.rs  main.rs  rpc.rs  transfer.rs  utils.rs  wallet.rs
core/jubjub/: Cargo.toml  README.md
core/jubjub/src/: arithmetic.rs  fr.rs  lib.rs
core/jubjub/tests/: arithmetic.rs  jubjub.rs
example/plonk-circuits/: Cargo.toml
example/plonk-circuits/src/: main.rs
examples/zkink/: Cargo.toml
groth16/: Cargo.toml
groth16/examples/: simple.rs
groth16/src/: bit_iterator.rs  circuit.rs  constraint_system.rs  curves.rs  error.rs  fft.rs  key.rs  keypair.rs  lib.rs  msm.rs  params.rs  poly.rs  proof.rs  prover.rs  public_parameters.rs  r1cs.rs  verifier.rs  wire.rs  zksnark.rs
groth16/src/curves/: edwards.rs
groth16/src/matrix/: element.rs
groth16/src/prover/: proof.rs
jubjub/: Cargo.toml
jubjub/benches/: jubjub_curve.rs  jubjub_field.rs
jubjub/src/: curve.rs  fp.rs  lib.rs
node/client/: Cargo.toml  README.md
node/client/src/: command.rs  main.rs  rpc.rs  utils.rs  wallet.rs
node/client/src/command/: balance.rs  fund.rs  init.rs  list.rs  transfer.rs
node/client/src/rpc/: extrinsic.rs
node/kogarashi/: Cargo.toml
node/kogarashi/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
nova/: Cargo.toml  README.md
nova/src/: circuit.rs  driver.rs  function.rs  gadget.rs  hash.rs  ivc.rs  lib.rs  pedersen.rs  proof.rs  prover.rs  relaxed_r1cs.rs  test.rs  transcript.rs  verifier.rs
nova/src/circuit/: augmented.rs  nifs.rs  transcript.rs
nova/src/gadget/: big_nat.rs  instance.rs  mimc.rs  relaxed_instance.rs  relaxed_r1cs.rs
nova/src/hash/: circuit.rs  constant.rs  helper.rs
nova/src/relaxed_r1cs/: instance.rs  witness.rs
nova_pallet/: Cargo.toml
nova_pallet/src/: lib.rs  mock.rs  tests.rs  traits.rs  types.rs
pairing/: Cargo.toml  README.md
pairing/benches/: pairing.rs
pairing/tests/: pairing.rs
pallets/confidential_smart_contract/: Cargo.toml
pallets/confidential_smart_contract/common/: Cargo.toml
pallets/confidential_smart_contract/rpc/runtime-api/: Cargo.toml
pallets/confidential_smart_contract/src/: benchmarking.rs  exec.rs  gas.rs  tests.rs
pallets/confidential_smart_contract/src/wasm/: mod.rs  prepare.rs  runtime.rs
pallets/confidential_transfer/: Cargo.toml  README.md
pallets/confidential_transfer/src/: benchmarking.rs  circuit.rs  confidential_transfer.rs  encrypted_currency.rs  groth16_circuit.rs  lib.rs  mock.rs  tests.rs  tests_composite.rs  tests_local.rs  traits.rs
pallets/encrypted_balance/: Cargo.toml  README.md
pallets/encrypted_balance/src/: benchmarking.rs  encrypted_currency.rs  lib.rs  tests.rs  tests_composite.rs  tests_local.rs  weights.rs
pallets/plonk/: Cargo.toml  README.md
pallets/plonk/src/: lib.rs  mock.rs  tests.rs  traits.rs  types.rs
pallets/zkrollup/: Cargo.toml
pallets/zkrollup/src/: lib.rs  mock.rs  tests.rs  traits.rs
poly/: Cargo.toml
poly/benches/: msm.rs
poly/src/: commitment.rs  fft.rs  kzg.rs  lib.rs  msm.rs  poly.rs  util.rs  witness.rs
poly/src/kzg/: key.rs
primitive/bls12_381/: Cargo.toml  README.md
primitive/bls12_381/src/: coordinate.rs  fp.rs  fq.rs  fq2.rs  fq6.rs  fqn.rs  fr.rs  g1.rs  g2.rs  gt.rs  lib.rs  params.rs
primitive/bls12_381/tests/: affine.rs  coordinate.rs  extension_field.rs  multi_scalar_multiplication.rs  projective.rs
primitive/circuits/: Cargo.toml  README.md
primitive/circuits/src/: confidential_transfer.rs  lib.rs
primitive/crypto/: Cargo.toml  README.md
primitive/crypto/src/: arithmetic.rs  behave.rs  common.rs  dress.rs  entity.rs  lib.rs
primitive/crypto/src/arithmetic/: bits_256.rs  coordinate.rs  limbs.rs  points.rs  utils.rs
primitive/crypto/src/behave/: algebra.rs  basic.rs  comp.rs  curve.rs  extension_field.rs  fft.rs  field.rs  pairing.rs  parity.rs  sign.rs  snark.rs
primitive/crypto/src/dress/: basic.rs  built_in.rs  curve.rs  extension_field.rs  extention_field.rs  field.rs  pairing.rs
primitive/crypto/tests/: bls12_381.rs  construction.rs  coordinate.rs  jubjub.rs  limbs.rs  points.rs  test_data.rs  utils.rs
primitive/ed25519/: Cargo.toml  README.md
primitive/ed25519/src/: curve.rs  fp.rs  lib.rs
primitive/elgamal/: Cargo.toml  README.md
primitive/elgamal/src/: lib.rs
primitive/jubjub/: Cargo.toml  README.md
primitive/jubjub/src/: algorithm.rs  arithmetic.rs  coordinate.rs  curve.rs  domain.rs  dress.rs  entity.rs  error.rs  fp.rs  fr.rs  interface.rs  lib.rs  operation.rs  pairing.rs  redsa.rs  schnorr.rs
primitive/jubjub/src/algorithm/: coordinate.rs
primitive/jubjub/src/arithmetic/: assembly.rs  coordinate.rs  limbs.rs  normal.rs  poly.rs  utils.rs
primitive/jubjub/src/domain/: curve.rs  field.rs
primitive/jubjub/src/dress/: field.rs
primitive/jubjub/tests/: arithmetic.rs  coordinate.rs
primitive/kzg/: Cargo.toml  README.md
primitive/kzg/src/: commitment.rs  fft.rs  keypair.rs  kzg.rs  lib.rs  poly.rs  util.rs  witness.rs
r1cs/: Cargo.toml  README.md
r1cs/src/: blueprint.rs  circuit.rs  driver.rs  gadget.rs  lib.rs  matrix.rs  prelude.rs  test.rs
r1cs/src/gadget/: binary.rs  curve.rs  field.rs
r1cs/src/matrix/: element.rs  entry.rs  row.rs  vector.rs
sample/: Cargo.toml  README.md
sample/rpc/src/: lib.rs
sample/src/: client.rs  lib.rs  tests.rs
(+839 files in other folders)
