[workspace]
members = [
    "bls12_381",
    "bn254",
    "groth16",
    "grumpkin",
    "jubjub",
    "r1cs",
    "zkstd",
]

[profile.release]
panic = "abort"
codegen-units = 1
overflow-checks = false
debug = true

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
