[workspace]
members = [
    "bn254",
    "groth16",
    "grumpkin",
    "nova",
    "zkstd",
    "nova_pallet"
]

[profile.release]
panic = "abort"
codegen-units = 1
overflow-checks = false
debug = true

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
