[package]
name = "zero-network-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.10.0", features = ["full"] }
hex = "0.4.3"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"
sp-keyring = "3.0.0"
sp-runtime = "3.0.0"
sp-version = "3.0.0"
sp-core = "3.0.0"
reqwest = { version = "0.11.12", features = ["json"] }

[workspace]
members = []
