[package]
name = "zkgroth16"
description = 'groth16 implementation'
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/Kogarashi/'
readme = 'README.md'
categories = ["cryptography"]
keywords = ["zkp", "blockchain", "elliptic-curve"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[dependencies]
zkstd = { path = "../zkstd", default-features = false }
r1cs = { path = "../r1cs", default-features = false }
jub-jub = { path = "../jubjub", default-features = false }
bls-12-381 = { path = "../bls12_381", default-features = false }
poly-commit = { path = "../poly", default-features = false }

[features]
default = ["std"]
std = [
    "zkstd/std"
]
