[package]
name = "zkgroth16"
description = 'groth16 implementation'
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/Kogarashi/'
readme = 'README.md'
categories = ["cryptography"]
keywords = ["zkp", "blockchain", "elliptic-curve"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[dependencies]
zkstd = { path = "../zkstd", default-features = false }
bn-254 = { path = "../bn254", default-features = false }
grumpkin = { path = "../grumpkin", default-features = false }
rayon = { version = "1.5.1", optional = true }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "zkstd/std",
    "rayon"
]
