[package]
name = "zknova"
description = 'nova implementation'
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/Kogarashi/'
readme = 'README.md'
categories = ["cryptography"]
keywords = ["zkp", "blockchain", "elliptic-curve"]

[dependencies]
r1cs = { path = "../r1cs", default-features = false }
zkstd = { path = "../zkstd", default-features = false }
generic-array = { version = "0.14.7", default-features = false }
bn-254 = { path = "../bn254", default-features = false }
serde = { version = "1.0.102", default-features = false, features = ["derive"] }
ff = { version = "0.13.0", features = ["derive"] }
blake2b_simd = { version = "1", default-features = false }

[dev-dependencies]
rand_core = { version="0.6.4", default-features = false, features = ["getrandom"] }
grumpkin = { path = "../grumpkin", default-features = false }

[features]
default = ["std"]
std = [
    "zkstd/std"
]
