[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = "ec-pairing"
description = 'Tate pairing implementation'
version = "0.0.14"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/Kogarashi/'
readme = 'README.md'
categories = ["cryptography"]
keywords = ["zkp", "blockchain", "elliptic-curve"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[dependencies]
zkstd = { path = "../zkstd", default-features = false }
bls-12-381 = { path = "../bls12_381", default-features = false }
jub-jub = { path = "../jubjub", default-features = false }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }

[dev-dependencies]
criterion = "0.4.0"
rand = { version = "0.8" }
rand_core = { version="0.6.4", features = ["getrandom"] }

[[bench]]
name = "pairing"
harness = false
