[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = "poly-commit"
description = 'polynomial commitment implementation'
version = "0.0.13"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/Kogarashi/'
readme = 'README.md'
categories = ["cryptography"]
keywords = ["zkp", "blockchain", "elliptic-curve"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
rayon = { version = "1.5.1", optional = true }
zkstd = { path = "../zkstd", default-features = false }
bls-12-381 = { path = "../bls12_381", default-features = false }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "msm"
harness = false
required-features = ["std"]

[features]
default = ["std"]
std = [
    "zkstd/std",
    "rayon"
]
