[package]
name = "r1cs"
version = "0.1.0"
edition = "2021"

[dependencies]
zkstd = { path = "../zkstd", default-features = false }

[dev-dependencies]
jub-jub = { path = "../jubjub", default-features = false }
grumpkin = { path = "../grumpkin", default-features = false }

[features]
default = ["std"]
std = [
    "zkstd/std"
]
