[package]
name = "r1cs"
version = "0.1.0"
edition = "2021"

[dependencies]
zkstd = { path = "../zkstd", default-features = false }
bn-254 = { path = "../bn254", default-features = false }
grumpkin = { path = "../grumpkin", default-features = false }
ff = { version = "0.13.0", features = ["derive"] }

[features]
default = ["std"]
std = [
    "zkstd/std"
]
