[package]
authors = ['NoCtrlZ<shinsaku.ashizawa@artree.co.jp>']
description = 'twisted edwards curve implementation'
name = "zero-jubjub"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "2", default-features = false, features = ["derive"] }

[dev-dependencies]
rand = "0.7"
ed25519-dalek = "1"
