[package]
name = "plonk-circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.3"
ark-bls12-381 = "0.3"
ark-ed-on-bls12-381 = "0.3"
ark-ec = "0.3"
ark-poly = "0.3"
ark-poly-commit = "0.3"
derivative = "2.2.0"
rand_core = {version = "0.6", default-features=false, features = ["getrandom"] }
plonk = { git = "https://github.com/zero-network/plonk", rev = "4f7ae664709a7814ae166acfc9e2ce17c6ef45be", default-features = false }