[package]
authors = ['Kogarashi Dev Team <https://github.com/KogarashiNetwork/Kogarashi>']
build = 'build.rs'
description = 'A Substrate-based Kogarashi node.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'kogarashi-node'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[[bin]]
name = 'kogarashi-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '3.0.0'

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'
# Substrate dependencies
frame-benchmarking-cli = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sc-client-api = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sc-keystore = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sc-rpc = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sc-telemetry = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sc-transaction-pool = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sp-api = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sp-block-builder = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sp-blockchain = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sp-core = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sp-finality-grandpa = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sp-inherents = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sp-runtime = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
substrate-frame-rpc-system = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sc-rpc-api = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sp-consensus = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sp-consensus-aura = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sc-consensus = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sc-consensus-aura = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sc-finality-grandpa = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sc-basic-authorship = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sc-executor = { features = [
    'wasmtime'
], tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sc-service = { features = [
    'wasmtime'
], tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
sc-cli = { features = [
    'wasmtime'
], tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
frame-benchmarking = { tag = 'v3.0.0', git = "https://github.com/paritytech/substrate" }
# local dependencies
zkruntime = { path = '../../zkruntime/runtime', version = '3.0.0' }

[features]
default = []
runtime-benchmarks = ['zkruntime/runtime-benchmarks']
