[package]
authors = ['Kogarashi Dev Team <https://github.com/KogarashiNetwork/Kogarashi>']
build = 'build.rs'
description = 'A Substrate-based Kogarashi node.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'kogarashi-node'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[[bin]]
name = 'kogarashi-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '3.0.0'

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'
# Substrate dependencies
frame-benchmarking-cli = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
pallet-transaction-payment-rpc = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sc-client-api = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sc-keystore = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sc-rpc = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sc-telemetry = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sc-transaction-pool = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-api = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-block-builder = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-blockchain = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-core = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-finality-grandpa = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-inherents = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-runtime = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-transaction-pool = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
substrate-frame-rpc-system = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sc-rpc-api = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-consensus = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-consensus-aura = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sc-consensus = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sc-consensus-aura = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sc-finality-grandpa = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sc-basic-authorship = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sc-executor = { features = [
    'wasmtime'
], branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sc-service = { features = [
    'wasmtime'
], branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sc-cli = { features = [
    'wasmtime'
], branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
frame-benchmarking = { branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
# local dependencies
zkruntime = { path = '../../zkruntime', version = '3.0.0' }

[features]
default = []
runtime-benchmarks = ['zkruntime/runtime-benchmarks']
