[package]
name = "pallet-confidential-smart-contract"
description = 'confidential smart contract'
version = "0.1.0"
authors = ['NoCtrlZ<phantomofrotten@gmail.com>']
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
