[package]
name = "confidential_transfer"
description = 'Confidential Transfer Pallet'
version = "0.1.1"
edition = '2021'
authors = ['AshWhiteHat<phantomofrotten@gmail.com>']
license = "Apache-2.0"

[dependencies]
rand_xorshift = { version = '0.2.0', default-features = false, package = 'fullcodec_rand_xorshift' }

# parity
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
# SBP-M1 review: fetch `frame-support`, `frame-system`, `sp-std`, `sp-runtime` directly from GitHub for specified Substrate/Cumulus/Polkadot version.
frame-system = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }

# primitive
zero-plonk = { path = "../../primitive/plonk", default-features = false }
ec-pairing = { path = "../../primitive/pairing", default-features = false }
jub-jub = { path = "../../primitive/jubjub", default-features = false }
zkstd = { path = "../../primitive/zkstd", default-features = false }
bls-12-381 = { path = "../../primitive/bls12_381", default-features = false }
lifted-elgamal = { path = "../../primitive/elgamal", default-features = false }

# pallet
pallet-plonk = { path = "../plonk", default-features = false }
pallet-encrypted-balance = { path = "../encrypted_balance", default-features = false }

[dev-dependencies]
serde = { version = "1.0.102", default-features = false, features = ["derive"] }
rand = { version = "0.8", default-features = false }
# SBP-M1 review: fetch `sp-core`, `sp-io`, `sp-runtime` directly from GitHub for specified Substrate/Cumulus/Polkadot version.
sp-core = { version = '3.0.0', default-features = false }
sp-io = { path = "../../zkruntime/io", version = '3.0.0' }
sp-runtime = { version = '3.0.0', default-features = false }
ark-std = { version = "0.3", features = ["print-trace"] }

[features]
default = ["std"]
std = [
    'codec/std',
    'frame-support/std',
    # SBP-M1 review: some formatting tool may help :)
	'frame-system/std',
    'pallet-plonk/std',
    'pallet-encrypted-balance/std',
]
