[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = "pallet-encrypted-balance"
version = "0.2.3"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/Kogarashi/'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.102", default-features = false, features = ["derive"] }
# SBP-M1 review: fetch `sp-std`, `sp-runtime`, `sp-arithmetic`, `frame-support`, `frame-system` directly from GitHub for specified Substrate/Cumulus/Polkadot version.
codec = { version = "2.0.0", default-features = false, package = "parity-scale-codec", features = ["derive"] }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-arithmetic = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
lifted-elgamal = { path = '../../primitive/elgamal', default-features = false }
jub-jub = { path = '../../primitive/jubjub', default-features = false }
ec-pairing = { path = '../../primitive/pairing', default-features = false }
zkstd = { path = "../../primitive/zkstd", default-features = false }

[dev-dependencies]
# SBP-M1 review: fetch `sp-io`, `sp-core`, `pallet-transaction-payment` directly from GitHub for specified Substrate/Cumulus/Polkadot version.
sp-io = { path = "../../zkruntime/io", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
pallet-transaction-payment = { version = "3.0.0", default-features = false }
proptest = "1"

[features]
default = ["std"]
std = [
    'codec/std',
    "frame-support/std",
    # SBP-M1 review: think about using formatter :)
	'frame-system/std',
]
